linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkding 
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      containers:
      - image: sissbruecker/linkding:1.45.0
        name: linkding
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: linkding-data
          mountPath: /etc/linkding/data
      volumes:
      - name: linkding-data
        persistentVolumeClaim:
          claimName: linkding-data
